; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/sysdm/extr_startrec.c_SetCrashDlgItems.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/sysdm/extr_startrec.c_SetCrashDlgItems.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64, i64 }

@IDC_STRRECDUMPFILE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@IDC_STRRECOVERWRITE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@WM_SETTEXT = common dso_local global i32 0, align 4
@IDC_STRRECDEBUGCOMBO = common dso_local global i32 0, align 4
@CB_SETCURSEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_3__*)* @SetCrashDlgItems to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SetCrashDlgItems(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %21

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @IDC_STRRECDUMPFILE, align 4
  %13 = call i32 @GetDlgItem(i32 %11, i32 %12)
  %14 = load i32, i32* @FALSE, align 4
  %15 = call i32 @EnableWindow(i32 %13, i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @IDC_STRRECOVERWRITE, align 4
  %18 = call i32 @GetDlgItem(i32 %16, i32 %17)
  %19 = load i32, i32* @FALSE, align 4
  %20 = call i32 @EnableWindow(i32 %18, i32 %19)
  br label %78

21:                                               ; preds = %2
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = icmp eq i32 %24, 3
  br i1 %25, label %26, label %46

26:                                               ; preds = %21
  %27 = load i32, i32* %4, align 4
  %28 = load i32, i32* @IDC_STRRECDUMPFILE, align 4
  %29 = call i32 @GetDlgItem(i32 %27, i32 %28)
  %30 = load i32, i32* @TRUE, align 4
  %31 = call i32 @EnableWindow(i32 %29, i32 %30)
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* @IDC_STRRECOVERWRITE, align 4
  %34 = call i32 @GetDlgItem(i32 %32, i32 %33)
  %35 = load i32, i32* @FALSE, align 4
  %36 = call i32 @EnableWindow(i32 %34, i32 %35)
  %37 = load i32, i32* %4, align 4
  %38 = load i32, i32* @IDC_STRRECDUMPFILE, align 4
  %39 = call i32 @GetDlgItem(i32 %37, i32 %38)
  %40 = load i32, i32* @WM_SETTEXT, align 4
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 2
  %43 = load i64, i64* %42, align 8
  %44 = trunc i64 %43 to i32
  %45 = call i32 @SendMessageW(i32 %39, i32 %40, i32 0, i32 %44)
  br label %77

46:                                               ; preds = %21
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 8
  %50 = icmp eq i32 %49, 1
  br i1 %50, label %56, label %51

51:                                               ; preds = %46
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 8
  %55 = icmp eq i32 %54, 2
  br i1 %55, label %56, label %76

56:                                               ; preds = %51, %46
  %57 = load i32, i32* %4, align 4
  %58 = load i32, i32* @IDC_STRRECDUMPFILE, align 4
  %59 = call i32 @GetDlgItem(i32 %57, i32 %58)
  %60 = load i32, i32* @TRUE, align 4
  %61 = call i32 @EnableWindow(i32 %59, i32 %60)
  %62 = load i32, i32* %4, align 4
  %63 = load i32, i32* @IDC_STRRECOVERWRITE, align 4
  %64 = call i32 @GetDlgItem(i32 %62, i32 %63)
  %65 = load i32, i32* @TRUE, align 4
  %66 = call i32 @EnableWindow(i32 %64, i32 %65)
  %67 = load i32, i32* %4, align 4
  %68 = load i32, i32* @IDC_STRRECDUMPFILE, align 4
  %69 = call i32 @GetDlgItem(i32 %67, i32 %68)
  %70 = load i32, i32* @WM_SETTEXT, align 4
  %71 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %72 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %71, i32 0, i32 1
  %73 = load i64, i64* %72, align 8
  %74 = trunc i64 %73 to i32
  %75 = call i32 @SendMessageW(i32 %69, i32 %70, i32 0, i32 %74)
  br label %76

76:                                               ; preds = %56, %51
  br label %77

77:                                               ; preds = %76, %26
  br label %78

78:                                               ; preds = %77, %10
  %79 = load i32, i32* %4, align 4
  %80 = load i32, i32* @IDC_STRRECDEBUGCOMBO, align 4
  %81 = load i32, i32* @CB_SETCURSEL, align 4
  %82 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %83 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %82, i32 0, i32 0
  %84 = load i32, i32* %83, align 8
  %85 = call i32 @SendDlgItemMessageW(i32 %79, i32 %80, i32 %81, i32 %84, i32 0)
  %86 = load i32, i32* %3, align 4
  ret i32 %86
}

declare dso_local i32 @EnableWindow(i32, i32) #1

declare dso_local i32 @GetDlgItem(i32, i32) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1

declare dso_local i32 @SendDlgItemMessageW(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
